@@ -1,3 +1,9 @@
+2012-01-27 1.5.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* Ignore hierarchy level in Pica field 009B $a and compute the value ourselves.
+		We depend on this data being correct and it may be incorrect, causing an
+		infinite loop.
+	* Refactor functions and variables.
+
 2012-01-23 1.4.0 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* add nofollow attribute to tree expansion/collapsing links to reduce overzealous spidering
 
